# simple_jpeg

./: CMakeLists.txt  README.org
include/: huffman_encoding.h
src/: CMakeLists.txt  huffman_encoding.cc  main.cc
test/: CMakeLists.txt  test_huffman_encoding.cc
